--- a/maquette/README
+++ b/maquette/README
@@ -4,6 +4,8 @@ Bonjour à tous !
 
 Sur ce dépôt vous trouverez mes codes des différentes pages pour le site de garage réalisé dans le cadre de mon évaluation de formation.
 
+Voici la page d'accueil du site : https://kevinbonnefoy.fr/garage_parrot/
+
 Pour le correcteur ou correctrice veuillez vous rendre sur ce lien : https://kevinbonnefoy.fr/garage_parrot/admin/cnx-admin.php pour vous connecter à votre espace administration, vous pouvez faire différents test !
 
 Bien à vous !
