--- a/README
+++ b/README
@@ -8,6 +8,11 @@ Voici la page d'accueil du site : https://kevinbonnefoy.fr/garage_parrot/
 
 Pour le correcteur ou correctrice veuillez vous rendre sur ce lien : https://kevinbonnefoy.fr/garage_parrot/admin/cnx-admin.php pour vous connecter à votre espace administration, vous pouvez faire différents test !
 
+Vos identifiants pour vous connecter à votre espace d'administration : 
+
+email : studi@studi.fr
+password : Admin34@
+
 Bien à vous !
 
 BONNEFOY Kévin
